Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 </div>
 </div><div class="b b-s b-s-t150 b-s-b150 b-btn b-btn-1 wnd-align-center">
 	<div class="b-btn-c i-a">
-		<a class="b-btn-l" href=file:///C:/Users/Usuario/Desktop/final%20impresiones/portfolio.htm>
+		<a class="b-btn-l" href=https://juliaalvarez45.github.io/web/>
 			<span class="b-btn-t">Inicio</span>
 		</a>
 	</div>
@@ -278,4 +278,5 @@
 					urlPrefix: "https://events.webnode.com/projects/-/events/",
 					collection: "PROD",
 				}</script></body>
+
 </html>
