Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 	<div class="c-c cf"><div class="b b-text cf">
 	<div class="b-c b-text-c b-s b-s-t60 b-s-b60 b-cs cf"><h1 class="wnd-align-left"><strong>YCP</strong></h1>
 
-<p class="wnd-align-left">El Yacht Club Paysandú es una cede social situada cerca de las costas del rio Uruguay, que busca fomentar las actividades náuticas, el deporte en vela y la socialización. Nuestro objetivo en este proyecto era hacer un sistema de señalética congruente no solo con su identidad visual, sino con todo su concepto como tal.</p><p class="wnd-align-left"><br></p><p class="wnd-align-left">Fue un proyecto extremadamente denso y complicado, no solo por lo grande que era, sino porque requería una gran atención al detalle, el uso de cuadriculas, figura humana y demás aspectos técnicos que me eran muy complicados en el momento. Tuvimos que tener en cuenta aspectos de Tipografía (que se viera bien y legible en la señalética), Marketing (para las intervenciones que haríamos para que el Club fuera mas conocido/le gustara mas a la gente) y en menor medida dibujo técnico (al tener que usar cuadriculas que harían que los pictogramas se mantuvieran bajo las reglas de diseño comercial).&nbsp;</p>
+<p class="wnd-align-right">El Yacht Club Paysandú es una cede social situada cerca de las costas del rio Uruguay, que busca fomentar las actividades náuticas, el deporte en vela y la socialización. Nuestro objetivo en este proyecto era hacer un sistema de señalética congruente no solo con su identidad visual, sino con todo su concepto como tal.</p><p class="wnd-align-left"><br></p><p class="wnd-align-left">Fue un proyecto extremadamente denso y complicado, no solo por lo grande que era, sino porque requería una gran atención al detalle, el uso de cuadriculas, figura humana y demás aspectos técnicos que me eran muy complicados en el momento. Tuvimos que tener en cuenta aspectos de Tipografía (que se viera bien y legible en la señalética), Marketing (para las intervenciones que haríamos para que el Club fuera mas conocido/le gustara mas a la gente) y en menor medida dibujo técnico (al tener que usar cuadriculas que harían que los pictogramas se mantuvieran bajo las reglas de diseño comercial).&nbsp;</p>
 </div>
 </div></div>
 </div></div>
@@ -271,6 +271,7 @@
 
 				}</script></body>
 </html>
+
 
 
 
